<resources>
    <string name="app_name">FoodsDigitalHouse</string>
    <string name="lembrar_me">Lembrar-me</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>
    <string name="ou">Ou</string>
    <string name="title_activity_teste">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">REGISTER</string>
    <string name="login_with_facebook">LOGIN WITH FACEBOOK</string>
    <string name="title_activity_place">PlaceActivity</string>
</resources>
